new: Глобальная переработка функциональности Треннинг